<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/common_padding_default"
        android:paddingBottom="@dimen/common_padding_default">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            app:cardCornerRadius="@dimen/profile_corner_radius_large"
            app:cardElevation="@dimen/common_padding_min">
            <!--IMAGEVIEW PARA PREVISUALIZAR IMAGENES LOCALE/GALERIA/INTERNET-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/profile_image_size_large"
                android:layout_height="@dimen/profile_image_size_large"
                android:scaleType="centerCrop"

                android:src="@drawable/logo_pw" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_name" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_large"
            tools:text="Stock PW" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_email" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:linksClickable="false"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="@dimen/profile_text_size_middle"
            android:textStyle="italic"
            tools:text="tarea_quemedio@Macu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_website" />

        <TextView
            android:id="@+id/tvWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="false"
            android:textColor="@color/black"
            android:textColorLink="@color/blue_700"
            tools:text="https://puenteweb.com/pw/" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_phone" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_middle"
            tools:text="299456789" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_show_map"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_middle"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_map"
            app:drawableTint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_large"
            android:drawableStart="@drawable/ic_settings"
            android:text="@string/main_setting_location" />

    </LinearLayout>
</ScrollView>